package io.jeo.protobuf;

message Array {
  required int32 dim = 1 [default = 2];
  repeated double ord = 2 [packed = true];
}

message Point {
  required double x = 1;
  required double y = 2;
  optional double z = 3;
}

message LineString {
  required Array coords = 1; 
}

message Polygon {
  required Array ring = 1;
  repeated Array holes = 2;
}

message MultiPoint {
  required Array members = 1;
}

message MultiLineString {
  repeated Array members = 1; 
}

message MultiPolygon {
  repeated Polygon members = 1;
}

message Geometry {
  enum Type { 
     POINT = 1; 
     LINESTRING = 2;
     POLYGON = 3;
     MULTIPOINT = 4;
     MULTILINESTRING = 5;
     MULTIPOLYGON = 6;
     GEOMETRYCOLLECTION = 7;
     GEOMETRY = 8;
  }

  required Type type = 1;
  optional Point point = 2;
  optional LineString lineString = 3;
  optional Polygon polygon = 4;
  optional MultiPoint multiPoint = 5;
  optional MultiLineString multiLineString = 6;
  optional MultiPolygon multiPolygon = 7;
  optional GeometryCollection collection = 8;
}

message GeometryCollection {
  repeated Geometry members = 1;
}

message Bounds {
  required double east = 1;
  required double south = 2;
  required double west = 3;
  required double north = 4;
}
